tout mis à part le cv pdf et les liens des portfolios de certaines personnes

--- a/en/about.html
+++ b/en/about.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="noise">PROJECTS</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -65,7 +65,7 @@
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="../assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
                     <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
