--- a/en/mmi-town.html
+++ b/en/mmi-town.html
@@ -49,7 +49,7 @@
                     <a href="about.html" class="noise">ABOUT</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -69,7 +69,7 @@
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="../assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
                     <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
@@ -181,7 +181,7 @@
                         <br>
                         <a href="https://julescointrel.fr" target="_blank">JULES COINTREL</a>
                         <br>
-                        <a href="https://minallad.fr" target="_blank">MINAL LAD</a>
+                        <a href="https://minal-lad.com" target="_blank">MINAL LAD</a>
                     </div>
                 </div>
             </div>
