--- a/en/video-cv-editing.html
+++ b/en/video-cv-editing.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV vidéo !">
+    <meta name="author" lang="en" content="Yohan Guyot">
+    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yohanguyot.fr/cv-video.html">
-    <meta property="og:title" content="YOHAN GUYOT | CV VIDÉO">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV vidéo !">
+    <meta property="og:url" content="https://yohanguyot.fr/en/video-cv-editing.html">
+    <meta property="og:title" content="YOHAN GUYOT | VIDEO CV EDITING">
+    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yohanguyot.fr/cv-video.html">
-    <meta property="twitter:title" content="YOHAN GUYOT | CV VIDÉO">
-    <meta property="twitter:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV vidéo !">
+    <meta property="twitter:url" content="https://yohanguyot.fr/en/video-cv-editing.html">
+    <meta property="twitter:title" content="YOHAN GUYOT | VIDEO CV EDITING">
+    <meta property="twitter:description"
+        content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
-    <title>YOHAN GUYOT | CV VIDÉO</title>
+    <title>YOHAN GUYOT | VIDEO CV EDITING</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -46,20 +47,20 @@
         <nav>
             <ul>
                 <li>
-                    <a href="a-propos.html" class="noise">À PROPOS</a>
+                    <a href="about.html" class="noise">ABOUT</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
 
         <div id="language">
             <div class="fr">
-                <a href="cv-video.html" class="noise">FR</a>
+                <a href="../montage-cv-video.html" class="noise">FR</a>
             </div>
             <div class="en">
-                <a href="en/video-resume.html" class="noise">EN</a>
+                <a href="video-cv-editing.html" class="noise">EN</a>
             </div>
         </div>
 
@@ -67,13 +68,13 @@
             <div class="copyright">©YOHANGUYOT</div>
             <div id="social">
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
-                    <img src="assets/img/behance.svg" alt="behance" draggable="false">
+                    <img src="../assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
-                    <img src="assets/img/instagram.svg" alt="instagram" draggable="false">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
+                    <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
-                    <img src="assets/img/linkedin.svg" alt="behance" draggable="false">
+                    <img src="../assets/img/linkedin.svg" alt="behance" draggable="false">
                 </a>
             </div>
         </div>
@@ -86,18 +87,18 @@
                 <div class="left-col">
                     <div class="year">2020</div>
                 </div>
-                <div class="type-present noise">AUDIOVISUEL</div>
+                <div class="type-present noise">AUDIOVISUAL</div>
                 <div class="project-img-present darker">
-                    <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" draggable="false">
+                    <img src="../assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" draggable="false">
                 </div>
             </div>
             <div class="flex-title">
                 <div class="project-title-present">
                     <div class="project-title-filled-present">
-                        <h2 class="noise">CV VIDÉO</h2>
+                        <h2 class="noise">VIDEO CV <br> EDITING</h2>
                     </div>
                     <div class="project-title-outline-present">
-                        <h2>CV VIDÉO</h2>
+                        <h2>VIDEO CV <br> EDITING</h2>
                     </div>
                 </div>
                 <div class="num-line-present">
@@ -117,21 +118,19 @@
                 <div class="role" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                     data-aos-once="true">
                     <div class="role-title">
-                        RÔLE
+                        ROLE
                     </div>
                     <div class="role-list">
-                        RÉALISATEUR
+                        DIRECTOR
                         <br>
-                        CAMÉRAMAN
-                        <br>
-                        GRAPHISTE
+                        CAMERAMAN
                     </div>
                 </div>
 
                 <div class="outils" data-aos="fade-right" data-aos-duration="1500"
                     data-aos-anchor-placement="top-bottom" data-aos-once="true">
                     <div class="outils-title noise">
-                        OUTILS
+                        TOOLS
                     </div>
                     <div class="outils-list">
                         PREMIERE PRO
@@ -139,37 +138,41 @@
                         CANON EOS M50
                         <br>
                         IPHONE 8
-                        <br>
-                        PROCREATE
-                        <br>
-                        FL STUDIO
                     </div>
                 </div>
 
                 <div class="desc" data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                     data-aos-once="true">
-                    Dans le cadre du module d’audiovisuel en DUT MMI, j’ai dû réaliser un cv vidéo en anglais afin de me
-                    présenter de façon plus originale et personnelle que sur papier.
+                    As part of the audiovisual module in DUT MMI, I had to make a video cv in English in order to
+                    present myself in a more original and personal way than on paper.
+                    I decided here to show the montage I made, which also happens to be my first montage.
+                    <br>
+                    Doing a montage that represents me was a difficult task, my initial idea having been disrupted by
+                    the announcement of the second containment, I had to quickly shoot shots without having any idea
+                    what I would do with them. So I decided to show my creativity by making a video editing inspired by
+                    music videos from mostly hazardous shots.
                 </div>
             </div>
         </div>
 
         <div class="project-gallery">
-            <div class="coming-soon noise" data-aos="zoom-out" data-aos-duration="1500"
-                data-aos-anchor-placement="top-bottom" data-aos-once="true">À VENIR</div>
+            <video controls poster="../assets/img/cv-video/montage-cv-video-cover.jpg" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+                <source src="../assets/img/cv-video/montage-cv-video.mp4" type="video/mp4">
+            </video>
         </div>
 
         <div class="credits" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
             data-aos-once="true">
             <div class="credits-container">
                 <div class="credits-title noise">
-                    CRÉDITS
+                    CREDITS
                 </div>
                 <div class="credits-list">
                     <div class="credits-role">
-                        PLANS ADDITIONELS
+                        ADDITIONAL SHOTS
                         <br>
-                        PLANS ADDITIONELS
+                        ADDITIONAL SHOTS
                     </div>
                     <div class="credits-name">
                         <a href="https://thanhtrangluu.fr" target="_blank">THANH-TRANG LUU</a>
@@ -188,7 +191,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="assets/js/project-hover.js"></script>
+    <script src="../assets/js/project-hover.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://unpkg.com/kursor"></script>
     <script>
