--- a/montage-cv-video.html
+++ b/montage-cv-video.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video resume !">
+    <meta name="author" lang="fr" content="Yohan Guyot">
+    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yohanguyot.fr/en/video-resume.html">
-    <meta property="og:title" content="YOHAN GUYOT | VIDEO RESUME">
-    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video resume !">
+    <meta property="og:url" content="https://yohanguyot.fr/montage-cv-video.html">
+    <meta property="og:title" content="YOHAN GUYOT | MONTAGE CV VIDÉO">
+    <meta property="og:description"
+        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yohanguyot.fr/en/video-resume.html">
-    <meta property="twitter:title" content="YOHAN GUYOT | VIDEO RESUME">
-    <meta property="twitter:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video resume !">
+    <meta property="twitter:url" content="https://yohanguyot.fr/montage-cv-video.html">
+    <meta property="twitter:title" content="YOHAN GUYOT | MONTAGE CV VIDÉO">
+    <meta property="twitter:description"
+        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
-    <title>YOHAN GUYOT | VIDEO RESUME</title>
+    <title>YOHAN GUYOT | MONTAGE CV VIDÉO</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -46,20 +48,20 @@
         <nav>
             <ul>
                 <li>
-                    <a href="about.html" class="noise">ABOUT</a>
+                    <a href="a-propos.html" class="noise">À PROPOS</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
 
         <div id="language">
             <div class="fr">
-                <a href="../cv-video.html" class="noise">FR</a>
+                <a href="montage-cv-video.html" class="noise">FR</a>
             </div>
             <div class="en">
-                <a href="video-resume.html" class="noise">EN</a>
+                <a href="en/video-cv-editing.html" class="noise">EN</a>
             </div>
         </div>
 
@@ -67,13 +69,13 @@
             <div class="copyright">©YOHANGUYOT</div>
             <div id="social">
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
-                    <img src="../assets/img/behance.svg" alt="behance" draggable="false">
+                    <img src="assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
-                    <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
+                    <img src="assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
-                    <img src="../assets/img/linkedin.svg" alt="behance" draggable="false">
+                    <img src="assets/img/linkedin.svg" alt="behance" draggable="false">
                 </a>
             </div>
         </div>
@@ -86,18 +88,18 @@
                 <div class="left-col">
                     <div class="year">2020</div>
                 </div>
-                <div class="type-present noise">AUDIOVISUAL</div>
+                <div class="type-present noise">AUDIOVISUEL</div>
                 <div class="project-img-present darker">
-                    <img src="../assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" draggable="false">
+                    <img src="assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" draggable="false">
                 </div>
             </div>
             <div class="flex-title">
                 <div class="project-title-present">
                     <div class="project-title-filled-present">
-                        <h2 class="noise">VIDEO <br> RESUME</h2>
+                        <h2 class="noise"> MONTAGE <br> CV VIDÉO</h2>
                     </div>
                     <div class="project-title-outline-present">
-                        <h2>VIDEO <br> RESUME</h2>
+                        <h2>MONTAGE <br> CV VIDÉO</h2>
                     </div>
                 </div>
                 <div class="num-line-present">
@@ -117,21 +119,19 @@
                 <div class="role" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                     data-aos-once="true">
                     <div class="role-title">
-                        ROLE
+                        RÔLE
                     </div>
                     <div class="role-list">
-                        DIRECTOR
+                        RÉALISATEUR
                         <br>
-                        CAMERAMAN
-                        <br>
-                        GRAPHIST
+                        CAMÉRAMAN
                     </div>
                 </div>
 
                 <div class="outils" data-aos="fade-right" data-aos-duration="1500"
                     data-aos-anchor-placement="top-bottom" data-aos-once="true">
                     <div class="outils-title noise">
-                        TOOLS
+                        OUTILS
                     </div>
                     <div class="outils-list">
                         PREMIERE PRO
@@ -139,37 +139,42 @@
                         CANON EOS M50
                         <br>
                         IPHONE 8
-                        <br>
-                        PROCREATE
-                        <br>
-                        FL STUDIO
                     </div>
                 </div>
 
                 <div class="desc" data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                     data-aos-once="true">
-                    As part of the audiovisual module in DUT MMI, I had to make a video cv in English in order to
-                    present myself in a more original and personal way than on paper.
+                    Dans le cadre du module d’audiovisuel en DUT MMI, j’ai dû réaliser un cv vidéo afin de me
+                    présenter de façon plus originale et personnelle que sur papier.
+                    J'ai décidé ici de montrer le montage que j'ai réalisé qui se trouve également être mon premier
+                    montage.
+                    <br>
+                    Réaliser un montage qui me représente a été une tâche difficile, mon idée initiale ayant été
+                    perturbée par l'annonce du second confinement, j'ai dû rapidement tourner des plans sans avoir idée
+                    de ce que j'en ferait. J'ai alors décidé de montrer ma créativité en faisant un montage inspiré de
+                    clips musicaux à partir de plans pour la plupart hasardeux.
                 </div>
             </div>
         </div>
 
         <div class="project-gallery">
-            <div class="coming-soon noise" data-aos="zoom-out" data-aos-duration="1500"
-                data-aos-anchor-placement="top-bottom" data-aos-once="true"> COMING SOON </div>
+            <video controls poster="assets/img/cv-video/montage-cv-video-cover.jpg" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+                <source src="assets/img/cv-video/montage-cv-video.mp4" type="video/mp4">
+            </video>
         </div>
 
         <div class="credits" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
             data-aos-once="true">
             <div class="credits-container">
                 <div class="credits-title noise">
-                    CREDITS
+                    CRÉDITS
                 </div>
                 <div class="credits-list">
                     <div class="credits-role">
-                        ADDITIONAL SHOTS
+                        PLANS ADDITIONELS
                         <br>
-                        ADDITIONELS SHOTS
+                        PLANS ADDITIONELS
                     </div>
                     <div class="credits-name">
                         <a href="https://thanhtrangluu.fr" target="_blank">THANH-TRANG LUU</a>
@@ -188,7 +193,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <script src="../assets/js/project-hover.js"></script>
+    <script src="assets/js/project-hover.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://unpkg.com/kursor"></script>
     <script>
