--- a/en/index.html
+++ b/en/index.html
@@ -42,7 +42,7 @@
                     <a href="about.html" class="noise">ABOUT</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="../assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
                     <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
@@ -178,20 +178,20 @@
                     <div class="vert-line"></div>
                     <div class="num-right noise">4/9</div>
                 </div>
-                <a href="video-resume.html" class="project-img-right darker">
+                <a href="video-cv-editing.html" class="project-img-right darker">
                     <img src="../assets/img/cv-video/cv-video-cover.jpg" alt="" id="cv-video-img" class="cv-video"
                         draggable="false">
                 </a>
             </div>
             <div class="project-title">
                 <div class="project-title-filled-right">
-                    <a href="video-resume.html">
-                        <h2 class="noise cv-video-title">VIDEO <br> RESUME</h2>
+                    <a href="video-cv-editing.html">
+                        <h2 class="noise cv-video-title">VIDEO CV <br> EDITING</h2>
                     </a>
                 </div>
                 <div class="project-title-outline-right">
-                    <a href="video-resume.html">
-                        <h2 class="cv-video cv-video-title">VIDEO <br> RESUME</h2>
+                    <a href="video-cv-editing.html">
+                        <h2 class="cv-video cv-video-title">VIDEO CV <br> EDITING</h2>
                     </a>
                 </div>
             </div>
