--- a/jpo-2021.html
+++ b/jpo-2021.html
@@ -52,7 +52,7 @@
                     <a href="a-propos.html" class="noise">À PROPOS</a>
                 </li>
                 <li>
-                    <a href="mailto:yohanguyot@hotmail.com" class="noise">CONTACT</a>
+                    <a href="mailto:yohanguyot.pro@gmail.com" class="noise">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -72,7 +72,7 @@
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="#" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
                     <img src="assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
@@ -225,7 +225,7 @@
 
         <div class="next-project" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
             data-aos-once="true" data-aos-delay="300">
-            <a href="cv-video.html" class="project-link">CV VIDÉO ➔</a>
+            <a href="montage-cv-video.html" class="project-link">MONTAGE CV VIDÉO ➔</a>
         </div>
     </section>
 
