--- a/a-propos.html
+++ b/a-propos.html
@@ -21,7 +21,7 @@
 
     <title>YOHAN GUYOT | À PROPOS</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -108,7 +108,6 @@
                             ➔</a>
                     </div>
                 </div>
-
             </div>
 
         </div>
