--- a/en/about.html
+++ b/en/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my profile !">
+    <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/about.html">
@@ -21,7 +22,7 @@
 
     <title>YOHAN GUYOT | ABOUT</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -99,7 +100,6 @@
                         <a href="../assets/img/a-propos/cv-yohan-guyot.pdf" target="_blank">VIEW MY RESUME ➔</a>
                     </div>
                 </div>
-
             </div>
 
         </div>
