--- a/en/mmi-town.html
+++ b/en/mmi-town.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover MMI Town !">
+    <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/mmi-town.html">
@@ -21,7 +22,7 @@
 
     <title>YOHAN GUYOT | MMI TOWN</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -122,6 +123,8 @@
                     </div>
                     <div class="role-list">
                         FULL-STACK DEVELOPER
+                        <br>
+                        UX DESIGNER
                     </div>
                 </div>
 
