--- a/en/open-house-2020.html
+++ b/en/open-house-2020.html
@@ -7,6 +7,7 @@
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my poster for the 2020 open house of the University
         of Champs-sur-Marne !">
+    <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/open-house-2020.html">
@@ -24,7 +25,7 @@
 
     <title>YOHAN GUYOT | OPEN HOUSE 2020</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
