--- a/en/open-house-2021.html
+++ b/en/open-house-2021.html
@@ -7,6 +7,7 @@
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my poster for the 2021 open house of the University
         of Champs-sur-Marne !">
+    <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/open-house-2021.html">
@@ -24,7 +25,7 @@
 
     <title>YOHAN GUYOT | OPEN HOUSE 2021</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -206,17 +207,17 @@
                     <div class="credits-name">
                         <a href="https://paulbarbosa.fr" target="_blank">PAUL BARBOSA</a>
                         <br>
-                        <a href="https://ydrisstayane.fr" target="_blank">YDRISS TAYANE</a>
+                        <a href="https://www.ydriss-design.com" target="_blank">YDRISS TAYANE</a>
                         <br>
                         <a href="https://rachelalbersario.fr" target="_blank">RACHEL ALBERSARIO</a>
                         <br>
-                        <a href="https://ilesasma.fr" target="_blank">ILES ASMA</a>
+                        <a href="https://iles-asma.live/" target="_blank">ILES ASMA</a>
                         <br>
                         <a href="https://julescointrel.fr" target="_blank">JULES COINTREL</a>
                         <br>
                         <a href="https://thanhtrangluu.fr" target="_blank">THANH-TRANG LUU</a>
                         <br>
-                        <a href="https://antoineassanvo.fr" target="_blank">ANTOINE ASSANVO</a>
+                        <a href="https://antoineassv.fr/" target="_blank">ANTOINE ASSANVO</a>
                     </div>
                 </div>
             </div>
