--- a/jpo-2021.html
+++ b/jpo-2021.html
@@ -24,7 +24,7 @@
 
     <title>YOHAN GUYOT | JPO 2021</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -207,17 +207,17 @@
                     <div class="credits-name">
                         <a href="https://paulbarbosa.fr" target="_blank">PAUL BARBOSA</a>
                         <br>
-                        <a href="https://ydrisstayane.fr" target="_blank">YDRISS TAYANE</a>
+                        <a href="https://www.ydriss-design.com" target="_blank">YDRISS TAYANE</a>
                         <br>
                         <a href="https://rachelalbersario.fr" target="_blank">RACHEL ALBERSARIO</a>
                         <br>
-                        <a href="https://ilesasma.fr" target="_blank">ILES ASMA</a>
+                        <a href="https://iles-asma.live/" target="_blank">ILES ASMA</a>
                         <br>
                         <a href="https://julescointrel.fr" target="_blank">JULES COINTREL</a>
                         <br>
                         <a href="https://thanhtrangluu.fr" target="_blank">THANH-TRANG LUU</a>
                         <br>
-                        <a href="https://antoineassanvo.fr" target="_blank">ANTOINE ASSANVO</a>
+                        <a href="https://antoineassv.fr/" target="_blank">ANTOINE ASSANVO</a>
                     </div>
                 </div>
             </div>
