--- a/mmi-town.html
+++ b/mmi-town.html
@@ -21,7 +21,7 @@
 
     <title>YOHAN GUYOT | MMI TOWN</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
@@ -123,6 +123,8 @@
                     </div>
                     <div class="role-list">
                         DÉVELOPPEUR FULL-STACK
+                        <br>
+                        UX DESIGNER
                     </div>
                 </div>
 
