--- a/montage-cv-video.html
+++ b/montage-cv-video.html
@@ -23,7 +23,7 @@
 
     <title>YOHAN GUYOT | MONTAGE CV VIDÉO</title>
 
-    <link rel="shortcut icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,800;1,300&display=swap"
